# the-battlefield

./: .gitignore  Cargo.toml  Cross.toml  README.md  build-sdl-web.sh  build-wgpu-web.sh  build.sh  index.html  manifest.json  run-qemu.sh  sw.js
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: input.rs  lib.rs
crates/client/src/game_loop/: assets.rs  environment.rs  fog.rs  foreground.rs  helpers.rs  hud.rs  mod.rs  render.rs  screens.rs  terrain.rs  touch.rs
crates/client/src/renderer/: canvas2d.rs  mod.rs  texture_manager.rs
crates/core/: Cargo.toml
crates/core/benches/: game_tick.rs  headless_frames.rs
crates/core/examples/: probe_1v1_lean.rs  probe_capitals.rs  probe_front.rs  probe_gen_steps.rs  probe_map_hash.rs  probe_objectives.rs  probe_zone_churn.rs
crates/core/src/: animation.rs  asset_manifest.rs  autotile.rs  building.rs  camera.rs  combat.rs  config.rs  flowfield.rs  grid.rs  lib.rs  particle.rs  pawn.rs  player_input.rs  render_util.rs  sheep.rs  sprite.rs  touch_input.rs  ui.rs  unit.rs  zone.rs
crates/core/src/game/: ai.rs  ai_movement.rs  authority.rs  combat.rs  fov.rs  mod.rs  movement.rs  orders.rs  player.rs  setup.rs
crates/core/src/mapgen/: mod.rs  simplex.rs  village.rs
crates/core/src/rendering/: foreground.rs  mod.rs
crates/emscripten/: Cargo.toml
crates/emscripten/src/: emscripten.rs  main.rs
crates/native/: Cargo.toml
crates/native/src/: main.rs
crates/sdl/: Cargo.toml
crates/sdl/src/: emscripten.rs  game_loop.rs  input.rs  lib.rs  main.rs  renderer.rs
crates/sdl/src/renderer/: assets.rs  draw_helpers.rs  foreground.rs  hud.rs  mod.rs  terrain.rs  text.rs  touch.rs
crates/wgpu/: Cargo.toml
crates/wgpu-native/: Cargo.toml
crates/wgpu-native/src/: lib.rs  main.rs
crates/wgpu/shaders/: effects.wgsl  fog.wgsl  grass.wgsl  primitive.wgsl  sprite.wgsl  water.wgsl
crates/wgpu/src/: game_loop.rs  gpu.rs  input.rs  lib.rs
crates/wgpu/src/renderer/: assets.rs  draw_helpers.rs  effects_batch.rs  mod.rs  primitive_batch.rs  sprite_batch.rs  text.rs
docs/: asset-pack.md  gdd.md
docs/plans/: city-network.md  conquest-economy.md  game-modes-menu.md  garrison-and-conscript.md  garrison-and-free-mode.md  manpower.md  order-cooldown-ui.md  pawn-economy.md  ui-kit.md  village-zones.md
docs/superpowers/plans/: 2026-03-13-army-squad-ai.md  2026-03-13-smooth-movement-animation.md
docs/superpowers/specs/: 2026-03-13-army-squad-ai-design.md  2026-03-13-smooth-movement-animation-design.md
pi/: Makefile  README.md  cross-build.sh  qemu-run.sh
pi/docker/: Dockerfile.aarch64
pi/qemu-system/: launch.sh  provision.sh  setup-image.sh
src/: animation.rs  autotile.rs  building.rs  camera.rs  combat.rs  flowfield.rs  game.rs  game_loop.rs  grid.rs  input.rs  lib.rs  particle.rs  sprite.rs  terrain_gen.rs  town.rs  turn.rs  unit.rs  zone.rs
src/game/: ai_movement.rs  mod.rs  orders.rs  player.rs  setup.rs
src/game_loop/: assets.rs  environment.rs  fog.rs  foreground.rs  helpers.rs  hud.rs  mod.rs  render.rs  screens.rs  terrain.rs
src/mapgen/: mod.rs  simplex.rs
src/renderer/: batch_renderer.rs  canvas2d.rs  canvas_renderer.rs  color.wgsl  gpu.rs  mod.rs  sprite.wgsl  sprite_renderer.rs  texture_manager.rs  traits.rs  vertex.rs
web-sdl/: shell.html
web-wgpu/: battlefield_wgpu_native.js  index.html  sw.js
