[package]
name = "the-battlefield"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlImageElement",
    "CssStyleDeclaration",
    "CanvasRenderingContext2d",
    "console",
    "Performance",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "EventTarget",
    "FocusEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "DomRect",
    "ImageData",
    "Navigator",
] }
js-sys = "0.3"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
