[package]
name = "battlefield-wgpu-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "battlefield-wgpu"
path = "src/main.rs"

[dependencies]
battlefield-wgpu = { path = "../wgpu" }
winit = "0.30"
log = "0.4"
pollster = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement"] }
