[package]
name = "battlefield-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
battlefield-core = { path = "../core" }
battlefield-assets = { path = "../assets" }
wgpu = { version = "24", features = ["webgl"] }
winit = "0.30"
png = "0.17"
rusttype = "0.9"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gilrs = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-time = "1"
